fix layout issues on todo pages

--- a/apps/documentation/src/components/MdxWrapper/MdxWrapper.module.css
+++ b/apps/documentation/src/components/MdxWrapper/MdxWrapper.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  display: flex;
+}
+
 .container {
   margin-top: var(--mantine-spacing-xl);
 }
